--- a/pages/index.he.mdx
+++ b/pages/index.he.mdx
@@ -14,4 +14,4 @@ A **simple**, **powerful** and **flexible** site generation framework with every
 
 The documentation is available at [https://nextra.site](https://nextra.site).
 
-## אסף הגבר
+## אסף המלך של העולם
